rhi_sources += files(
  'src/RHI/vulkan_device.c',
  'src/RHI/vulkan_instance.c',
  'src/RHI/vulkan_surface.c',
  'src/RHI/vulkan_swapchain.c',
  'src/RHI/vulkan_pipeline.c',
  'src/RHI/vulkan_renderpass.c',
  'src/RHI/vulkan_commands.c',
  'src/RHI/vulkan_sync.c',
  'src/RHI/vulkan_buffer.c',
  )

rhi_includes += include_directories('include')

engine_deps += vulkan_dep
